--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,5 @@
+<div class="jumbotron">
+<h1>Welcome to Demo App</h1>
 
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
-<p> Sign Up <%= link_to "here","#" %> </p>
+Click Here to <%= link_to  "Sign Up","#", class: "btn btn-primary btn-lg" %> 
+</div>
