editing homepage and navigationbar

--- a/app/assets/stylesheets/bootstrapcustomization.css.scss
+++ b/app/assets/stylesheets/bootstrapcustomization.css.scss
@@ -1,1 +1,7 @@
+$body-bg: #8e44ad;
+$navbar-default-bg: #d35400;
+$navbar-default-link-color: #f1c40f;
+$brand-primary: #c0392b;
+$jumbotron-bg: #bdc3c7;
+
  @import 'bootstrap'; 
