--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,13 +8,13 @@
 </head>
 <body>
 
-<%= render 'layouts/header' %>
+#adding partial file for the application
+<%= render 'layouts/header' %> 
 
+# adding container class for styling
 <div class="container">
- 
-<%= yield %>
-
-
+ <%= yield %>
 </div>
+
 </body>
 </html>
