--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,10 +11,14 @@
       </button>
       <a class="navbar-brand" href="#">DEMO</a>
     </div>
+    
+    <!--these two links for whole app in the right side of navigation bar-->
+
     <ul class="nav navbar-nav navbar-right">
-    	<%= link_to "Home",root_path %>
+    <%= link_to "Home",root_path %>
 		<%= link_to "About",about_path %>
     </ul>
+
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
